--- a/project/src/main/resources/templates/information.html
+++ b/project/src/main/resources/templates/information.html
@@ -336,25 +336,25 @@
 
     <script>
         $(window).load(function () {
-            var user = 190;
-            var pass = "111";
-            $.ajax({
-                url:"/log",
-                type:"POST",
-                data:{"userId":user,"password":pass},
-                dataType : "json",
-                success:function (data) {
-                    if(data == 0){
-                        alert("密码错误，请重新输入")
-                    }
-                    else{
-                        alert("欢迎" + data)
-                    }
-                },
-                error:function (request) {
-                    alert('登陆失败')
-                }
-            })
+            // var user = 190;
+            // var pass = "111";
+            // $.ajax({
+            //     url:"/log",
+            //     type:"POST",
+            //     data:{"userId":user,"password":pass},
+            //     dataType : "json",
+            //     success:function (data) {
+            //         if(data == 0){
+            //             alert("密码错误，请重新输入")
+            //         }
+            //         else{
+            //             alert("欢迎" + data)
+            //         }
+            //     },
+            //     error:function (request) {
+            //         alert('登陆失败')
+            //     }
+            // })
             $.ajax({
                 url:"/getSession",
                 type:"GET",
