智能机器人

--- a/project/src/main/resources/templates/robot.html
+++ b/project/src/main/resources/templates/robot.html
@@ -15,13 +15,13 @@
 	-->
 	<div id="box">
 		<div class="b-head">
-			<img  class="h-img" alt="" src="/img/logo1.png" width=80; height=60;/>
-			<span class="h_span">智能客服小思</span>
+			<img  class="h-img" alt="" src="/img/logo2.png" width=80; height=60;/>
+			<span class="h_span">客服小思</span>
 		</div>
 		<div class="b-body">
 			<div class="rotWord">
 				<span></span>
-				<p>嗨，最近想我没有？</p>
+				<p>亲~~~</p>
 			</div>
 		</div>
 		<div class="b-footer">
