--- a/project/src/main/resources/static/css/index.css
+++ b/project/src/main/resources/static/css/index.css
@@ -24,7 +24,7 @@
 	body {
 		font-size: 12px;
 		font-family: "微软雅黑";
-		background: url(../img/bg.jpg) no-repeat;
+		background: url(../img/bg1.jpg) no-repeat;
 		width: 100%;
 		height: 100vh;
 		background-size: cover;
@@ -98,7 +98,7 @@
 		margin-left: 10px;
 		padding: 10px;
 		line-height: 24px;
-		background: rgba(0, 0, 255, .5);
+		background: 	#E9967A;
 		border-radius: 6px;
 		max-width: 220px;
 	}
@@ -120,7 +120,7 @@
 		margin-right: 10px;
 		padding: 10px;
 		line-height: 24px;
-		background: #19b955;
+		background:	#EEB4B4;
 		border-radius: 6px;
 		max-width: 220px;
 	}
