--- a/project/src/main/resources/templates/design.html
+++ b/project/src/main/resources/templates/design.html
@@ -804,7 +804,9 @@
                       </div>
                       <div class="addsec_txtbox addsec-txtbox row">
                         <input type="text" value="" placeholder="Enter your Text" class="form-control add_text">
-                        
+                        <div class="text-btns textBtns whiteBtnNectar" >
+                            <a class="text-button btn btn-sm btn-success text-done" id="text-done" style="width: 100px">Add</a>
+                          </div>
                       </div>
                     </div>
 
